; ModuleID = '/home/carl/AnghaBench/libui/test/extr_page5.c_saveFile.c'
source_filename = "/home/carl/AnghaBench/libui/test/extr_page5.c_saveFile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@parent = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [12 x i8] c"(cancelled)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @saveFile to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @saveFile(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i32, i32* @parent, align 4
  %7 = call i8* @uiSaveFile(i32 %6)
  store i8* %7, i8** %5, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = icmp eq i8* %8, null
  br i1 %9, label %10, label %14

10:                                               ; preds = %2
  %11 = load i8*, i8** %4, align 8
  %12 = call i32 @uiLabel(i8* %11)
  %13 = call i32 @uiLabelSetText(i32 %12, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  br label %21

14:                                               ; preds = %2
  %15 = load i8*, i8** %4, align 8
  %16 = call i32 @uiLabel(i8* %15)
  %17 = load i8*, i8** %5, align 8
  %18 = call i32 @uiLabelSetText(i32 %16, i8* %17)
  %19 = load i8*, i8** %5, align 8
  %20 = call i32 @uiFreeText(i8* %19)
  br label %21

21:                                               ; preds = %14, %10
  ret void
}

declare dso_local i8* @uiSaveFile(i32) #1

declare dso_local i32 @uiLabelSetText(i32, i8*) #1

declare dso_local i32 @uiLabel(i8*) #1

declare dso_local i32 @uiFreeText(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
